[workspace]
members = [
    "message",
    "node",
    "regulator",
    "intergration_test",
    "curv",
    "bulletproofs"
]
resolver = "2"

[workspace.dependencies]
message = { path = "./message" }
node = { path = "./node" }
regulator = { path = "./regulator" }
bulletproof-kzen = { path = "./bulletproof"}
intergration_test = { path = "./intergration_test" }
curv-kzen = { path = "./curv"}
sha2 = "0.9"
num-bigint = "0.3"
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
# serde_yaml = "0.8"
time = "0.1"
serde_json = "1.0"
num = "0.2"
chrono = "0.4"
crossbeam-channel = "0.5.1"
bincode = "1.3.1"
anyhow = "1.0"
tokio = { version = "1.32.0", features = ["full"] }