[package]
name = "elgamal"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv = { package = "curv-kzen", git="https://github.com/ZenGo-X/curv.git", rev="44537a74"}
sha2 = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
[[bin]]
name = "elgamal"
path = "src/main.rs"
